SLT_Handler/Include/MMC/MMCWFP39.h

INT API latch(INT);
INT API set_axis_runstop(INT,INT);
INT API get_axis_runstop(INT,pINT);
INT API set_endless_rotationax(INT, INT, INT);
INT API fset_endless_rotationax(INT, INT, INT);
INT API get_endless_rotationax(INT, pINT);
INT API fget_endless_rotationax(INT, pINT);
INT API set_endless_linearax(INT, INT, INT);
INT API fset_endless_linearax(INT, INT, INT);
INT API get_endless_linearax(INT, pINT);
INT API fget_endless_linearax(INT, pINT);
INT API set_endless_range(INT, double);
INT API fset_endless_range(INT, double);
INT API get_endless_range(INT, pDOUBLE);
INT API fget_endless_range(INT, pDOUBLE);
INT API set_linear_all_stop_flag(INT, INT);
INT API get_linear_all_stop_flag(INT, pINT);
INT API get_command_rpm(INT, pINT);
INT API get_encoder_rpm(INT, pINT);
INT API set_amp_resolution(INT, INT);
INT API fset_amp_resolution(INT, INT);
INT API get_amp_resolution(INT, pINT);
INT API fget_amp_resolution(INT, pINT);
INT API set_collision_prevent_flag(INT, INT);
INT API get_collision_prevent_flag(INT, pINT);
INT API set_collision_prevent(INT, INT, INT, INT, double);
INT API set_abs_encoder_type(INT, INT);
INT API get_abs_encoder_type(INT, pINT);
INT API set_fast_read_encoder(INT, INT);
INT API get_fast_read_encoder(INT, pINT);
INT API set_control_timer(INT, INT);
INT API fset_control_timer(INT , INT);
INT API get_control_timer(INT, pINT);
INT API fget_control_timer(INT , pINT);
INT API spl_move_data(INT, INT, INT, INT, INT, pDOUBLE, pDOUBLE, pDOUBLE, double,INT);
INT API spl_movex(INT, INT, INT, INT);
INT API spl_arc_movenax(INT, pINT, double, double, pDOUBLE, double, INT, INT);
INT API spl_line_movenax(INT, pINT, pDOUBLE, double, INT);
INT API set_mmc_led_num(INT);
INT API get_mmc_led_num(INT, pINT);
INT API get_fast_position(INT, pDOUBLE);
INT API set_encoder_ratioa(INT, INT);
INT API fset_encoder_ratioa(INT, INT);
INT API get_encoder_ratioa(INT, pINT);
INT API fget_encoder_ratioa(INT, pINT);
INT API set_encoder_ratiob(INT, INT);
INT API fset_encoder_ratiob(INT, INT);
INT API get_encoder_ratiob(INT, pINT);
INT API fget_encoder_ratiob(INT, pINT);
INT API set_analog_limit(INT, LONG);
INT API fset_analog_limit(INT, LONG);
INT API get_analog_limit(INT, pLONG);
INT API fget_analog_limit(INT, pLONG);
INT API set_position_lowpass_filter(INT, double);
INT API fset_position_lowpass_filter(INT, double);
INT API get_position_lowpass_filter(INT, double *);
INT API fget_position_lowpass_filter(INT, double *);
INT API set_velocity_lowpass_filter(INT, double);
INT API fset_velocity_lowpass_filter(INT, double);
INT API get_velocity_lowpass_filter(INT, double *);
INT API fget_velocity_lowpass_filter(INT, double *);
INT API set_position_notch_filter(INT, double);
INT API fset_position_notch_filter(INT, double);
INT API get_position_notch_filter(INT, pDOUBLE);
INT API fget_position_notch_filter(INT, pDOUBLE);
INT API set_velocity_notch_filter(INT, double);
INT API fset_velocity_notch_filter(INT, double);
INT API get_velocity_notch_filter(INT, pDOUBLE);
INT API fget_velocity_notch_filter(INT, pDOUBLE);
INT API set_mmc_parameter_init(INT);
INT API axis_all_status(INT, pINT, pLONG, pDOUBLE);
INT API set_sensor_auto_off(INT, INT);
INT API fset_sensor_auto_off(INT, INT);
INT API get_sensor_auto_off(INT, pINT);
INT API fget_sensor_auto_off(INT, pINT);
INT API get_spline_move_num(INT, pINT);
INT API set_servo_linear_flag(INT, INT);
INT API fset_servo_linear_flag(INT, INT);
INT API get_servo_linear_flag(INT, pINT);
INT API fget_servo_linear_flag(INT, pINT);
INT API spl_auto_line_move2ax(INT,INT,pDOUBLE, double, INT, INT);
INT API spl_auto_line_move3ax(INT,INT,INT,pDOUBLE, double, INT, INT);
INT API spl_auto_arc_move2ax(INT,INT, double, double, pDOUBLE, double, INT, INT, INT);
INT API spl_auto_arc_move3ax(INT,INT,INT, double, double, pDOUBLE, double, INT, INT, INT);
INT API spl_auto_arc_movenax(INT, pINT, double, double, pDOUBLE, double, INT, INT, INT);
INT API spl_auto_line_movenax(INT, pINT, pDOUBLE, double, INT, INT);
INT API set_analog_direction(INT, INT);
INT API fset_analog_direction(INT, INT);
INT API get_analog_direction(INT, pINT);
INT API fget_analog_direction(INT, pINT);
INT API position_compare(INT, INT, INT, INT, INT, INT, INT, INT, double, LONG);
INT API position_compare_enable(INT, INT);
INT API position_compare_index_clear(INT, INT);